Fix learner dashboard, course images, and admin enrollment UX
- Learner: replace default Breeze dashboard with "My Courses" listing enrolled *published* courses and progress.\n- Learner: show a banner when the user has enrollments in unpublished/draft courses (so they understand why they’re hidden).\n- Admin: prevent creating enrollments for draft courses (button disabled with tooltip) to match the business rule: learners should only access published courses.\n- Admin: switch course image input from URL to drag & drop upload (Filament FileUpload) on the public disk.\n- UI: render course images via Course::image_url so both external URLs and uploaded paths work consistently.\n- Docker/DX: add a shared volume for public uploads between app+web and ensure the upload directory is writable on startup; keep README updated (storage:link note for non-Docker).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: docker/app/Dockerfile
+    volumes:
+      - public-storage:/var/www/html/storage/app/public
     environment:
       APP_NAME: "Mini-LMS"
       APP_ENV: local
@@ -38,6 +40,8 @@ services:
       dockerfile: docker/web/Dockerfile
     ports:
       - "8080:80"
+    volumes:
+      - public-storage:/var/www/html/public/storage
     depends_on:
       - app
 
@@ -89,3 +93,4 @@ services:
 
 volumes:
   db-data:
+  public-storage:
